--- a/index (1).html
+++ b/index (1).html
@@ -1,4 +1,6 @@
-
+<a href="The_Hidden_Wealth_Blueprint.pdf" download>
+  📥 Download The Free Wealth Blueprint
+</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
